# thebrowsertutorial

./: README.md
cpp/: main.cpp  mainwindow.cpp  mainwindow.h  thebrowsertutorial.pro
cpp/languages/: thebrowser.es.qm  thebrowser.es.ts
python/: setup.cfg  setup.py  thebrowsertutorial.kdev4
python/thebrowser/: __main__.py  mainwindow.py  mainwindow.ui
