[metadata]
name = pybrowsertutorial
author = Antonio Larrosa <alarrosa@suse.com>
description = A small browser tutorial
version = 0.0.1
url = https://github.com/antlarr/thebrowsertutorial
keywords =
  browser
# List of classifiers: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Environment :: X11 Applications :: Qt
  Operating System :: POSIX
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Utilities
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
  pip >= 10
install_requires =
  pyqt5
tests_require =
